I have added a noise model

--- a/sym_regress_one.ipynb
+++ b/sym_regress_one.ipynb
@@ -722,14 +722,22 @@
    "id": "6d83b27a-6917-4cfb-8554-ebe7748cef61",
    "metadata": {},
    "source": [
-    "## introduce some random noise\n",
+    "## Introduction of random noise\n",
     "\n",
-    "* we want to investigate how stable the symbolic regression is when some noise is added"
+    "* we want to investigate how stable the symbolic regression is when some noise is added\n",
+    "* as the noise is introduced the symbolic regression may find it difficult to  extract the correct model.\n",
+    "* this noise is uncorrelated. Later correlations will be added.\n",
+    "\n",
+    "$$ y_{model + noise} = y_{model} ( 1 + \\sigma N(0,1)  )  $$\n",
+    "\n",
+    "where $N(0,1)$ is a random number generator  https://numpy.org/doc/1.15/reference/generated/numpy.random.randn.html\n",
+    "\n",
+    "The amount of noise is controlled by the parameter $\\sigma$ . "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "id": "f05f1a40-24f5-4674-a156-71832ce047fb",
    "metadata": {},
    "outputs": [],
